Fixed an issue causing the screen to (once again) develop some nasty white space on the right of the screen on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ html, body {
 
 @media (min-width: 320px) and (max-width: 641px) {
     html {
-        width: 116%;
+        width: 127%;
     }
 }
 
